--- a/services.html
+++ b/services.html
@@ -6,6 +6,7 @@
   <title>Services — Kelvin Mutwiri</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/services.css">
   <style>
     /* Center the copyright text */
     .site-footer .copyright {
@@ -23,12 +24,12 @@
       <a class="brand" href="index.html">Kelvin<span class="accent">.</span></a>
       <nav class="nav">
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
         <a href="skills.html">Skills</a>
         <a href="blog.html">Blog</a>
         <a href="services.html" class="active">Services</a>
         <a href="contact.html" class="contact-cta">Contact</a>
+         <a href="about.html" class="active">About</a>
       </nav>
       <div class="nav-actions">
         <button id="themeToggle6" class="icon-btn" aria-label="Toggle theme">🌙</button>
@@ -92,7 +93,7 @@
             <a href="www.linkedin.com/in/kelvin-kiambi-01250331b">LinkedIn</a>
             <a href="https://github.com/kelvin482">GitHub</a>
             <a href="#">Twitter</a>
-            <a href="+254 074631030">Phone</a>
+            <a href="+25493610003">Phone</a>
           </u>
       </div>
       <div>
