--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <title>About — Kelvin Mutwiri</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/about.css">
 </head>
 <body>
   <!-- ================= Header ================= -->
@@ -14,12 +15,12 @@
       <a class="brand" href="index.html">Kelvin<span class="accent">.</span></a>
       <nav class="nav">
         <a href="index.html">Home</a>
-        <a href="about.html" class="active">About</a>
         <a href="projects.html">Projects</a>
         <a href="skills.html">Skills</a>
         <a href="blog.html">Blog</a>
         <a href="services.html">Services</a>
         <a href="contact.html" class="contact-cta">Contact</a>
+        <a href="about.html" class="active">About</a>
       </nav>
       <div class="nav-actions">
         <button id="themeToggle2" class="icon-btn" aria-label="Toggle theme">🌙</button>
@@ -31,14 +32,14 @@
   <!-- ================= Main ================= -->
   <main>
     <!-- About Hero Section -->
-    <section class="about-hero" data-reveal>
+    <section class="section-container about-hero" data-reveal>
       <div class="container about-grid">
         <div class="about-left">
-          <div class="avatar-large">K M</div>
+          <img class="avatar-large" src="assets/images/me.jpg" alt="Kelvin Mutwiri">
         </div>
         <div class="about-right">
           <h1>About Me</h1>
-          <p class="lead">I'm Kelvin — a creative problem solver who blends code, design, and systems thinking to build meaningful products.</p>
+          <p class="lead">I'm a creative problem solver who blends code, design, and systems thinking to build meaningful products.</p>
           <p>I have experience building web apps with React and Django, designing interfaces that are easy to use, and managing networked systems for reliability and performance. I enjoy learning new AI tools and integrating them to improve developer workflows.</p>
 
           <h3>Approach</h3>
@@ -53,22 +54,22 @@
     </section>
 
     <!-- Timeline Section -->
-    <section class="timeline" data-reveal>
+    <section class="section-container timeline" data-reveal>
       <div class="container">
         <h2>Experience & Highlights</h2>
         <ol class="timeline-list">
           <li>
-            <strong>2021–Present</strong>
+            <strong>2025–Present</strong>
             <span>Full‑Stack Development & Freelance Product Work</span>
             <p>Building web apps with React, Django and implementing infrastructure automation.</p>
           </li>
           <li>
-            <strong>2018–2021</strong>
+            <strong>2024–2025</strong>
             <span>Systems & Network Admin</span>
             <p>Managed networks, servers, and on-prem infrastructure for clients and small teams.</p>
           </li>
           <li>
-            <strong>2015–2018</strong>
+            <strong>2025</strong>
             <span>Junior Developer</span>
             <p>Worked on front-end projects and small web apps.</p>
           </li>
@@ -77,14 +78,63 @@
     </section>
 
     <!-- Philosophy / Longread Section -->
-    <section class="longread" data-reveal>
+    <section class="section-container longread" data-reveal>
       <div class="container">
-        <h2>Deep Dive — Design & Development Philosophy</h2>
-        <p>This long-form section is written to engage visitors and give real insight. Talk about how you approach UI constraints, how you optimize for performance, your testing strategy, and how you use AI tools to prototype and generate ideas. Use case studies with before/after screenshots to keep readers on the page longer.</p>
+        <!-- How I Got Into Tech -->
+        <h2 style="
+          display: inline-block;
+          margin: 0 0 1rem 0;
+          font-weight: 600;
+          background: linear-gradient(90deg, #6A5ACD, #00BFFF);
+          -webkit-background-clip: text;
+          color: transparent;
+        ">
+          How I Got Into Tech
+        </h2>
+        <p>I was drawn into the tech world by curiosity — the idea that you can create something from nothing but logic, creativity, and persistence. The moment I built my first working interface and watched someone interact with it, I was hooked. Since then, I’ve been committed to designing digital experiences that are intuitive, visually clear, and genuinely useful.</p>
 
-        <h3>Case Study: Project Alpha</h3>
-        <p>Describe a project challenge, the process, the technical choices (React + Django API), and the results. Include metrics like load time improvement, conversion or task success rates, and lessons learned.</p>
-        <p>Encourage the reader to reach out for similar work — include a CTA at the end linking to Contact.</p>
+        <!-- What Motivates Me -->
+        <h2 style="
+          display: inline-block;
+          margin: 2rem 0 1rem 0;
+          font-weight: 600;
+          background: linear-gradient(90deg, #6A5ACD, #00BFFF);
+          -webkit-background-clip: text;
+          color: transparent;
+        ">
+          What Motivates My Work
+        </h2>
+        <p>What keeps me motivated is the constant growth. Technology evolves daily, and I love the challenge of learning, adapting, and pushing my skills forward. I believe progress is built step by step — even the smallest improvement matters.</p>
+        <p><em>“Great things are built by those who keep showing up — one line, one idea, one breakthrough at a time.”</em></p>
+      </div>
+    </section>
+
+    <!-- Certifications Section -->
+    <section class="section-container certifications" data-reveal>
+      <div class="container">
+        <h2>Certifications & Achievements</h2>
+        <div class="cert-grid">
+          <div class="cert-card">
+            <img src="assets/images/cert1.png" alt="Full-Stack Web Development">
+            <h3>💻 Full-Stack Web Development</h3>
+            <p>Completed a comprehensive web development course covering React, Django, and APIs.</p>
+          </div>
+          <div class="cert-card">
+            <img src="assets/images/cert2.png" alt="UI/UX Design Essentials">
+            <h3>🎨 UI/UX Design Essentials</h3>
+            <p>Learned modern design systems, wireframing, and prototyping techniques.</p>
+          </div>
+          <div class="cert-card">
+            <img src="assets/images/cert3.png" alt="Cloud & Networking">
+            <h3>☁️ Cloud & Networking</h3>
+            <p>Certified in cloud infrastructure, networking fundamentals, and automation practices.</p>
+          </div>
+          <div class="cert-card">
+            <img src="assets/images/cert4.png" alt="AI & Automation">
+            <h3>🤖 AI & Automation</h3>
+            <p>Gained skills in AI integration, chatbots, and workflow automation tools.</p>
+          </div>
+        </div>
       </div>
     </section>
   </main>
@@ -99,13 +149,13 @@
 
       <div>
         <h4>Contact</h4>
-                <ul class="socials">
-            <a href="kelvinkiambi35@gmai.com">Email</a>
-            <a href="www.linkedin.com/in/kelvin-kiambi-01250331b">LinkedIn</a>
-            <a href="https://github.com/kelvin482">GitHub</a>
-            <a href="#">Twitter</a>
-            <a href="+254 074631030">Phone</a>
-          </ul>
+        <ul class="socials">
+          <li><a href="mailto:kelvinkiambi35@gmail.com">Email</a></li>
+          <li><a href="https://www.linkedin.com/in/kelvin-kiambi-01250331b">LinkedIn</a></li>
+          <li><a href="https://github.com/kelvin482">GitHub</a></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="tel:+25493610003">Phone</a></li>
+        </ul>
       </div>
 
       <div>
