--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects — Kelvin Mutwiri</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+  <!--style-->
   <link rel="stylesheet" href="assets/css/style.css">
+  <!--project style-->
+  <link rel="stylesheet" href="assets/css/project.css">
+  <!--js-->
+  <script src="assets/js/project.js"></script>
+
 
   <style>
     /* Center copyright text */
@@ -24,12 +30,12 @@
       <a class="brand" href="index.html">Kelvin<span class="accent">.</span></a>
       <nav class="nav">
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
         <a href="projects.html" class="active">Projects</a>
         <a href="skills.html">Skills</a>
         <a href="blog.html">Blog</a>
         <a href="services.html">Services</a>
         <a href="contact.html" class="contact-cta">Contact</a>
+         <a href="about.html">About</a>
       </nav>
       <div class="nav-actions">
         <button id="themeToggle3" class="icon-btn" aria-label="Toggle theme">🌙</button>
@@ -43,12 +49,12 @@
     <button id="closeMobileNav" class="close-nav">×</button>
     <nav class="mobile-links">
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
       <a href="projects.html">Projects</a>
       <a href="skills.html">Skills</a>
       <a href="blog.html">Blog</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
+       <a href="about.html" class="active">About</a>
     </nav>
   </div>
 
@@ -87,7 +93,7 @@
             <a href="www.linkedin.com/in/kelvin-kiambi-01250331b">LinkedIn</a>
             <a href="https://github.com/kelvin482">GitHub</a>
             <a href="#">Twitter</a>
-            <a href="+254 074631030">Phone</a>
+            <a href="+25493610003">Phone</a>
                  </u>
       </div>
       <div>
