--- a/skills.html
+++ b/skills.html
@@ -29,12 +29,12 @@
 
       <nav class="nav">
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
         <a href="skills.html" class="active">Skills</a>
         <a href="blog.html">Blog</a>
         <a href="services.html">Services</a>
         <a href="contact.html" class="contact-cta">Contact</a>
+         <a href="about.html">About</a>
       </nav>
 
       <div class="nav-actions">
@@ -51,12 +51,12 @@
     <button id="closeMobileNav" class="close-nav">×</button>
     <nav class="mobile-links">
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
       <a href="projects.html">Projects</a>
       <a href="skills.html">Skills</a>
       <a href="blog.html">Blog</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
+       <a href="about.html" class="active">About</a>
     </nav>
   </div>
 
@@ -86,6 +86,16 @@
           </div>
         </div>
 
+        <!-- Skills Grid -->
+<div class="skills-wrapper">
+  <button class="scroll-btn left-btn">‹</button>
+  <div class="skills-grid" id="skillsGrid">
+    <!-- Skill cards will be added dynamically via JS -->
+  </div>
+  <button class="scroll-btn right-btn">›</button>
+</div>
+
+
         <!-- Longread Section -->
         <section class="longread" data-reveal>
           <h2>Why these skills?</h2>
@@ -111,7 +121,7 @@
             <a href="www.linkedin.com/in/kelvin-kiambi-01250331b">LinkedIn</a>
             <a href="https://github.com/kelvin482">GitHub</a>
             <a href="#">Twitter</a>
-            <a href="+254 074631030">Phone</a>
+            <a href="+25493610003">Phone</a>
           </u>
       </div>
       <div>
@@ -128,6 +138,7 @@
 
   <!-- ================= Scripts ================= -->
   <script src="assets/js/script.js"></script>
+  <script src="assets/js/skills.js"></script>
   <script>
     // Dark/Light Mode Toggle
     const themeToggle = document.getElementById('themeToggle');
