Updated portfolio section UI

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section id="hero" class="hero" data-reveal>
       <div class="container hero-grid">
         <div class="hero-text">
-          <h1>AM Kelvin Mutwiri</h1>
+          <h1>I'M Kelvin Mutwiri</h1>
           <p class="lead">Full-Stack Developer · UI/UX Designer · System & Network Admin · AI Enthusiast</p>
           <p class="bio">
             I build fast, beautiful web experiences and reliable networked systems —
