--- a/skills.html
+++ b/skills.html
@@ -10,6 +10,7 @@
 
   <!-- Global Styles -->
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/skills.css">
 
   <style>
     /* Center the copyright */
@@ -117,11 +118,13 @@
       <div>
         <h4>Contact</h4>
                  <ul class="socials">
-            <a href="kelvinkiambi35@gmai.com">Email</a>
-            <a href="www.linkedin.com/in/kelvin-kiambi-01250331b">LinkedIn</a>
-            <a href="https://github.com/kelvin482">GitHub</a>
-            <a href="#">Twitter</a>
-            <a href="+25493610003">Phone</a>
+  <li><a href="mailto:kelvinkiambi35@gmail.com">Email</a></li>
+  <li><a href="https://www.linkedin.com/in/kelvin-kiambi-01250331b" target="_blank">LinkedIn</a></li>
+  <li><a href="https://github.com/kelvin482" target="_blank">GitHub</a></li>
+  <li><a href="#" target="_blank">Twitter</a></li>
+  <li><a href="tel:+25493610003">Phone</a></li>
+</ul>
+
           </u>
       </div>
       <div>
