--- a/contact.html
+++ b/contact.html
@@ -7,119 +7,208 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #0f1217;
+      color: #e0e0e0;
+    }
+    .site-header {
+      background: #161b22;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .brand {
+      font-family: 'Poppins', sans-serif;
+      font-weight: 700;
+      font-size: 1.6rem;
+      color: #00bfff;
+      text-decoration: none;
+    }
+    nav.nav a {
+      margin-left: 1.5rem;
+      color: #cbd5e0;
+      text-decoration: none;
+      font-weight: 500;
+    }
+    nav.nav a.active {
+      color: #00bfff;
+    }
+    main {
+      padding: 3rem 1.5rem;
+      max-width: 900px;
+      margin: auto;
+    }
+    .contact-left, .contact-right {
+      background: #161b22;
+      padding: 2rem;
+      border-radius: 12px;
+      margin-bottom: 2rem;
+    }
+    h1 {
+      font-family: 'Poppins', sans-serif;
+      color: #00bfff;
+      margin-bottom: 1rem;
+    }
+    .lead {
+      color: #cbd5e0;
+      margin-bottom: 1.5rem;
+    }
+    label {
+      display: block;
+      margin-bottom: 0.3rem;
+      font-weight: 600;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 0.6rem 0.8rem;
+      margin-bottom: 1rem;
+      border: 1px solid #333;
+      border-radius: 8px;
+      background: #0f1217;
+      color: #e0e0e0;
+      font-family: 'Inter', sans-serif;
+    }
+    button.btn {
+      padding: 0.6rem 1.2rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 600;
+      margin-right: 1rem;
+    }
+    .btn.primary {
+      background: #00bfff;
+      color: #0f1217;
+    }
+    .btn.ghost {
+      background: transparent;
+      color: #00bfff;
+      border: 1px solid #00bfff;
+    }
+    .form-status {
+      margin-top: 0.5rem;
+      font-weight: 600;
+      color: #ff6b6b;
+    }
+    footer.site-footer {
+      background: #161b22;
+      padding: 2rem;
+      text-align: center;
+      color: #888;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 
 <body>
 
-  <!-- ================= Header ================= -->
-  <header class="site-header" data-reveal>
-    <div class="container nav-grid">
-
-      <a class="brand" href="index.html">Kelvin<span class="accent">.</span></a>
-
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
-        <a href="skills.html">Skills</a>
-        <a href="blog.html">Blog</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html" class="active contact-cta">Contact</a>
-         <a href="about.html" class="active">About</a>
-      </nav>
-
-      <div class="nav-actions">
-        <button id="themeToggle7" class="icon-btn" aria-label="Toggle theme">🌙</button>
-        <button id="menuBtn7" class="icon-btn menu-btn" aria-label="Open menu">☰</button>
-      </div>
-
-    </div>
+  <header class="site-header">
+    <a class="brand" href="index.html">Kelvin<span class="accent">.</span></a>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="skills.html">Skills</a>
+      <a href="blog.html">Blog</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html" class="active contact-cta">Contact</a>
+      <a href="about.html">About</a>
+    </nav>
   </header>
 
-
-  <!-- ================= Main ================= -->
   <main>
-    <section class="contact-section" data-reveal>
-      <div class="container contact-grid">
+    <div class="contact-left">
+      <h1>Get in touch</h1>
+      <p class="lead">Have a project or just want to say hi? Send a message and I'll get back to you.</p>
 
-        <!-- Contact Info -->
-        <div class="contact-left card">
-          <h1>Get in touch</h1>
-          <p class="lead">Have a project or just want to say hi? Send a message and I'll get back to you.</p>
-
-          <div class="contact-info">
-            <p><strong>Email</strong><br><a href="mailto:kelvinkiambi35@gmail.com">kelvinkiambi35@gmail.com</a></p>
-            <p><strong>LinkedIn</strong><br><a href="https://www.linkedin.com/in/kelvin-kiambi-01250331b" target="_blank">linkedin.com/in/kelvin-kiambi</a></p>
-            <p><strong>GitHub</strong><br><a href="https://github.com/kelvin482" target="_blank">github.com/kelvin482</a></p>
-            <p><strong>Phone</strong><br><a href="tel:+254746310313">+254 746 310 313</a></p>
-          </div>
-        </div>
-
-
-        <!-- Contact Form -->
-        <div class="contact-right card">
-
-          <!-- Replace YOUR_FORM_ID_HERE -->
-          <form id="contactForm" action="https://formspree.io/f/YOUR_FORM_ID_HERE" method="POST">
-
-            <label for="name">Your name</label>
-            <input id="name" name="name" type="text" required>
-
-            <label for="email">Email</label>
-            <input id="email" name="email" type="email" required>
-
-            <label for="message">Message</label>
-            <textarea id="message" name="message" rows="6" required></textarea>
-
-            <div class="form-actions">
-              <button type="submit" class="btn primary">Send Message</button>
-              <button type="button" id="saveDraft" class="btn ghost">Save Draft</button>
-            </div>
-
-            <p id="formStatus" class="form-status" aria-live="polite"></p>
-          </form>
-        </div>
-
+      <div class="contact-info">
+        <p><strong>Email</strong><br><a href="mailto:kelvinkiambi35@gmail.com">kelvinkiambi35@gmail.com</a></p>
+        <p><strong>LinkedIn</strong><br><a href="https://www.linkedin.com/in/kelvin-kiambi-01250331b" target="_blank">linkedin.com/in/kelvin-kiambi</a></p>
+        <p><strong>GitHub</strong><br><a href="https://github.com/kelvin482" target="_blank">github.com/kelvin482</a></p>
+        <p><strong>Phone</strong><br><a href="tel:+254746310313">+254 746 310 313</a></p>
       </div>
-    </section>
+    </div>
+
+    <div class="contact-right">
+      <form id="contactForm" action="https://formspree.io/f/mdkyoqyg" method="POST">
+        <label for="name">Your name</label>
+        <input id="name" name="name" type="text" required>
+
+        <label for="email">Email</label>
+        <input id="email" name="email" type="email" required>
+
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="6" required></textarea>
+
+        <div class="form-actions">
+          <button type="submit" class="btn primary">Send Message</button>
+          <button type="button" id="saveDraft" class="btn ghost">Save Draft</button>
+        </div>
+
+        <p id="formStatus" class="form-status" aria-live="polite"></p>
+      </form>
+    </div>
   </main>
 
-
-  <!-- ================= Footer ================= -->
-  <footer class="site-footer" data-reveal>
-    <div class="container footer-grid">
-
-      <div>
-        <strong>Kelvin Mutwiri</strong>
-        <p>Full-Stack Developer & Designer</p>
-      </div>
-
-      <div>
-        <h4>Contact</h4>
-        <ul class="socials">
-          <li><a href="mailto:kelvinkiambi35@gmail.com">Email</a></li>
-          <li><a href="https://www.linkedin.com/in/kelvin-kiambi-01250331b" target="_blank">LinkedIn</a></li>
-          <li><a href="https://github.com/kelvin482" target="_blank">GitHub</a></li>
-          <li><a href="#" target="_blank">Twitter</a></li>
-          <li><a href="tel:+25493610003">Phone</a></li>
-        </ul>
-      </div>
-
-      <div>
-        <h4>Site</h4>
-        <a href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
-        <a href="skills.html">Skills</a>
-      </div>
-
-    </div>
-
-    <div class="footer-bottom">
-      &copy; 2025 Kelvin Mutwiri. All rights reserved.
-    </div>
+  <footer class="site-footer">
+    &copy; 2025 Kelvin Mutwiri. All rights reserved.
   </footer>
 
+  <script>
+    const form = document.getElementById("contactForm");
+    const status = document.getElementById("formStatus");
 
-  <script src="assets/js/script.js"></script>
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const data = new FormData(form);
+
+      try {
+        const response = await fetch(form.action, {
+          method: "POST",
+          body: data,
+          headers: { "Accept": "application/json" }
+        });
+
+        if (response.ok) {
+          status.style.color = "#00ff7f";
+          status.textContent = "Message sent successfully ✅";
+          form.reset();
+        } else {
+          const result = await response.json();
+          status.style.color = "#ff6b6b";
+          status.textContent = result.error || "Something went wrong. Try again ❌";
+        }
+      } catch (err) {
+        status.style.color = "#ff6b6b";
+        status.textContent = "Something went wrong. Try again ❌";
+      }
+    });
+
+    // Optional: Save Draft button
+    const saveDraftBtn = document.getElementById("saveDraft");
+    saveDraftBtn.addEventListener("click", () => {
+      localStorage.setItem("contactFormDraft", JSON.stringify({
+        name: form.name.value,
+        email: form.email.value,
+        message: form.message.value
+      }));
+      alert("Draft saved locally!");
+    });
+
+    // Load draft if exists
+    window.addEventListener("load", () => {
+      const draft = JSON.parse(localStorage.getItem("contactFormDraft"));
+      if (draft) {
+        form.name.value = draft.name || "";
+        form.email.value = draft.email || "";
+        form.message.value = draft.message || "";
+      }
+    });
+  </script>
 
 </body>
 </html>
