--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
         </div>
 
         <div class="hero-card" aria-hidden="false">
-          <img src="assets/images/kelvin.jpg" alt="Kelvin Mutwiri" class="profile-img">
+          <img src="assets/images/me3.jpg" alt="Kelvin Mutwiri" class="profile-img">
           <div class="card-stats">
             <div><strong>2+</strong><span>Years Experience</span></div>
-            <div><strong>10+</strong><span>Projects</span></div>
-            <div><strong>Networking</strong><span>Systems & Infra</span></div>
+            <div><strong>5+</strong><span>Projects</span></div>
+            <div><strong></strong><span></span></div>
           </div>
         </div>
       </div>
