--- a/services.html
+++ b/services.html
@@ -8,12 +8,139 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/services.css">
   <style>
-    /* Center the copyright text */
-    .site-footer .copyright {
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #0f1217;
+      color: #e0e0e0;
+    }
+
+    .site-header {
+      background: #161b22;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .brand {
+      font-family: 'Poppins', sans-serif;
+      font-weight: 700;
+      font-size: 1.6rem;
+      color: #00bfff;
+      text-decoration: none;
+    }
+
+    nav.nav a {
+      margin-left: 1.5rem;
+      color: #cbd5e0;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    nav.nav a.active {
+      color: #00bfff;
+    }
+
+    main {
+      padding: 3rem 1.5rem;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    h1 {
+      font-family: 'Poppins', sans-serif;
+      color: #00bfff;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+
+    /* ================= Services Section ================= */
+    .service-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+      margin-top: 2rem;
+    }
+
+    .service-card {
+      background: #161b22;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0, 191, 255, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .service-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 15px 35px rgba(0, 191, 255, 0.2);
+    }
+
+    .service-card h3 {
+      margin-bottom: 1rem;
+      color: #00e0ff;
+    }
+
+    .service-card p {
+      color: #cbd5e0;
+    }
+
+    /* ================= Why Choose Me Section ================= */
+    .why-choose {
+      margin-top: 5rem;
+    }
+
+    .why-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 2rem;
+      margin-top: 2rem;
+    }
+
+    .why-card {
+      background: #161b22;
+      padding: 1.8rem 1.5rem;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 191, 255, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .why-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 12px 30px rgba(0, 191, 255, 0.2);
+    }
+
+    .why-card h4 {
+      color: #00e0ff;
+      margin-bottom: 0.8rem;
+      font-size: 1.2rem;
+    }
+
+    .why-card p {
+      color: #cbd5e0;
+      line-height: 1.5;
+    }
+
+    footer.site-footer {
+      background: #161b22;
+      padding: 2rem;
+      text-align: center;
+      color: #888;
+      font-size: 0.9rem;
+    }
+
+    .copyright {
       text-align: center;
       margin-top: 1rem;
       font-size: 0.9rem;
-      color: var(--text-muted, #888);
+      color: #888;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.6rem;
+      }
     }
   </style>
 </head>
@@ -29,7 +156,7 @@
         <a href="blog.html">Blog</a>
         <a href="services.html" class="active">Services</a>
         <a href="contact.html" class="contact-cta">Contact</a>
-         <a href="about.html" class="active">About</a>
+        <a href="about.html">About</a>
       </nav>
       <div class="nav-actions">
         <button id="themeToggle6" class="icon-btn" aria-label="Toggle theme">🌙</button>
@@ -38,42 +165,54 @@
     </div>
   </header>
 
-  <!-- ================= Mobile Navigation ================= -->
-  <div id="mobileNav" class="mobile-nav">
-    <button id="closeMobileNav" class="close-nav">×</button>
-    <nav class="mobile-links">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
-      <a href="skills.html">Skills</a>
-      <a href="blog.html">Blog</a>
-      <a href="services.html">Services</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </div>
-
   <!-- ================= Main Content ================= -->
   <main>
+    <!-- ================= Services Section ================= -->
     <section class="services" data-reveal>
-      <div class="container">
-        <h1>Services I Offer</h1>
-        <div class="service-grid">
-          <div class="service-card">
-            <h3>Web Applications</h3>
-            <p>From MVP to production — React frontends with Django backends and tested APIs.</p>
-          </div>
-          <div class="service-card">
-            <h3>UI/UX Design</h3>
-            <p>Design systems, high-fidelity prototypes, and user research to validate ideas quickly.</p>
-          </div>
-          <div class="service-card">
-            <h3>Infrastructure & Networking</h3>
-            <p>Secure network setups, monitoring, and automation for reliable production deployments.</p>
-          </div>
-          <div class="service-card">
-            <h3>AI Integration</h3>
-            <p>Implement AI features like chat assistants, summarizers, and automation workflows.</p>
-          </div>
+      <h1>Services I Offer</h1>
+      <div class="service-grid">
+        <div class="service-card">
+          <h3>Web Applications</h3>
+          <p>From MVP to production — React frontends with Django backends and tested APIs.</p>
+        </div>
+        <div class="service-card">
+          <h3>UI/UX Design</h3>
+          <p>Design systems, high-fidelity prototypes, and user research to validate ideas quickly.</p>
+        </div>
+        <div class="service-card">
+          <h3>Infrastructure & Networking</h3>
+          <p>Secure network setups, monitoring, and automation for reliable production deployments.</p>
+        </div>
+        <div class="service-card">
+          <h3>AI Integration</h3>
+          <p>Implement AI features like chat assistants, summarizers, and automation workflows.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- ================= Why Choose Me Section ================= -->
+    <section class="why-choose" data-reveal>
+      <h1>Why Choose Me</h1>
+      <div class="why-grid">
+        <div class="why-card">
+          <h4>Professional Expertise</h4>
+          <p>I combine deep technical knowledge with modern design principles to deliver robust and user-friendly solutions.</p>
+        </div>
+        <div class="why-card">
+          <h4>Reliable & Hardworking</h4>
+          <p>I prioritize deadlines and ensure projects are completed efficiently without compromising quality.</p>
+        </div>
+        <div class="why-card">
+          <h4>Trust & Transparency</h4>
+          <p>Clear communication and full transparency with clients build trust and long-term professional relationships.</p>
+        </div>
+        <div class="why-card">
+          <h4>Innovative Solutions</h4>
+          <p>I bring creative and future-proof solutions tailored to client needs, leveraging the latest technology trends.</p>
+        </div>
+        <div class="why-card">
+          <h4>Client Satisfaction</h4>
+          <p>Your success is my priority — I focus on delivering high-quality outcomes that exceed expectations.</p>
         </div>
       </div>
     </section>
@@ -88,13 +227,13 @@
       </div>
       <div>
         <h4>Contact</h4>
-                 <ul class="socials">
-            <a href="kelvinkiambi35@gmai.com">Email</a>
-            <a href="www.linkedin.com/in/kelvin-kiambi-01250331b">LinkedIn</a>
-            <a href="https://github.com/kelvin482">GitHub</a>
-            <a href="#">Twitter</a>
-            <a href="+25493610003">Phone</a>
-          </u>
+        <ul class="socials">
+          <a href="mailto:kelvinkiambi35@gmail.com">Email</a>
+          <a href="https://www.linkedin.com/in/kelvin-kiambi-01250331b" target="_blank">LinkedIn</a>
+          <a href="https://github.com/kelvin482" target="_blank">GitHub</a>
+          <a href="#">Twitter</a>
+          <a href="tel:+25493610003">Phone</a>
+        </ul>
       </div>
       <div>
         <h4>Site</h4>
@@ -111,7 +250,6 @@
   <!-- ================= Scripts ================= -->
   <script src="assets/js/script.js"></script>
   <script>
-    // Insert current year dynamically
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
